Commented default text

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -16,13 +16,13 @@
         <p>You are logged in as <strong>Regular User</strong>. Limited access granted.</p>
     {% endif %}
 
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    {# <h1>Hello {{ controller_name }}! ✅</h1>
 
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code>C:/Jovan Components/JOVAN PROJECTS/Symfony_Projects/SecurityBasics1/src/Controller/DashboardController.php</code></li>
         <li>Your template at <code>C:/Jovan Components/JOVAN PROJECTS/Symfony_Projects/SecurityBasics1/templates/dashboard/index.html.twig</code></li>
-    </ul>
+    </ul> #}
 </div>
 {% endblock %}
 
